vlib/v/checker/tests/inout/unknown_method.out
vlib/v/checker/tests/inout/unknown_method.v:7:12: error: unknown method: checker.Test.sdd
    5| fn main() {
    6|     t := Test{}
    7|     println(t.sdd())
                     ~~~~~
    8| }